<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp">


        <LinearLayout
            android:id="@+id/devices_layout_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="horizontal"
                android:padding="1dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/device_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_devices" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/device_name"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/device_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/device_address"
                    android:textSize="14sp"
                    android:textStyle="normal" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:text="@string/rssi"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rssi_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:text="@string/_00"
                    android:textSize="14sp"
                    android:textStyle="normal" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/device_connect"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/connect"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:icon="@drawable/ic_bluetooth"
                    app:iconGravity="start" />

            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>