<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/valuesCard"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:weightSum="5"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:text="@string/accelerometer"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="3"
                        android:weightSum="3"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_weight="1"
                            android:id="@+id/value_A0"
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/value_1"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_weight="1"
                            android:id="@+id/value_A1"
                            android:layout_width="0dp"
                            android:textAlignment="center"
                            android:layout_height="match_parent"
                            android:text="@string/value_2"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:textAlignment="center"
                            android:id="@+id/value_A2"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/value_3"/>

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:weightSum="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/gyroscope"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="3"
                    android:weightSum="3"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_weight="1"
                        android:id="@+id/value_G0"
                        android:textAlignment="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/value_1"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:textAlignment="center"
                        android:id="@+id/value_G1"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/value_2"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:textAlignment="center"
                        android:id="@+id/value_G2"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/value_3"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:weightSum="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/magnetometer"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="3"
                    android:weightSum="3"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:id="@+id/value_M0"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/value_1"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:id="@+id/value_M1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/value_2"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:textAlignment="center"
                        android:id="@+id/value_M2"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/value_3"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/accuracy"
                    android:textAlignment="center"
                    android:layout_weight="1" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:id="@+id/accuracyValue"
                    android:text="@string/_00"
                    android:textAlignment="center"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/timestamp"
                    android:textAlignment="center"
                    android:layout_height="match_parent"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/_00000000"
                    android:id="@+id/timeStamp"
                    android:textAlignment="center"
                    android:layout_height="match_parent"/>


            </LinearLayout>


        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valuesCard">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_Linear"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/progress_Linear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/startScan"
                android:enabled="true"
                android:text="@string/startScanning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:text="@string/download"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintTop_toBottomOf="@id/startScan"
                app:layout_constraintStart_toStartOf="@id/startScan"
                app:layout_constraintEnd_toEndOf="@id/startScan"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</androidx.constraintlayout.widget.ConstraintLayout>